# jtdub.com

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Gemfile  README.md  SEO_SETUP.md  _config.yml  add_archive_notices.py  astro.config.mjs  blog.html  index.html  jtdub.html  package.json  packetgeek.html  photography.html  pyproject.toml  robots.txt  search.json  sitemap.xml  tags.html  tasks.py
_data/: academic_papers.yml  apps_data.yml  external_posts.yml  oss_data.yml  photo_data.yml  publications.yml  resume.yml
_drafts/: 2012-10-25-rhce+series-+nfs.html  2012-10-27-rhce+series-+smb.html  2014-02-11-a+primer+in+data+center+design.html  2017-11-14-2017+peru+expedition+-+traveling+to+lima.html  2018-11-02-peru+expedition+-+the+back+story.html  2020-02-15-lost-temple-of-inca.html
_includes/: external_posts.html  footer.html  header.html  optimized_image.html  publications.html  simple_image.html  tagged_posts.html
_layouts/: default.html  tag_index.html
_plugins/: exerpt_filter.rb  tag_index.rb
_posts/: 2009-05-31-a-nettelnetcisco-example-save-running.md  2009-05-31-a-nettelnetcisco-example-save-running_31.html  2009-05-31-an-open-source-implementation-of-cisco.md  2009-05-31-an-open-source-implementation-of-cisco_31.html  2009-05-31-prepping-ubuntu-server-edition-to-run.md  2009-05-31-prepping-ubuntu-server-edition-to-run_31.html  2009-05-31-using-perl-to-grab-proccess-id-in-linux.html  2009-05-31-using-perl-to-grab-proccess-id-in-linux.md  2009-05-31-why-i-here.html  2009-06-03-ethernet-cat-5-pin-outs_3.html  2009-06-03-nsa-security-configuration-guides.md  (+268 more)
(+352 files in other folders)
